--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ header {
     width: 100vw;
 }
 .panel {
+    object-fit: cover;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -398,11 +399,19 @@ footer {
 }
 
 .partner{
+    background-color: rgb(0, 0, 0 ,0.1);
     display: flex;
-    justify-content:space-around;
+    justify-content:center;
     padding: 10px 20px 10px 15px; 
     margin-bottom: 50px;
+    align-items: center;
+    /* min-height: 100vh; */
+    margin-left: 5%;
+    border-radius: 1rem;
+    width: 90%;
+    flex-direction: column;
 }
+
 .partner img{
     border-radius: 30px;
     width:150px; 
@@ -464,14 +473,7 @@ footer {
     line-height: 50px;
 }
 
-.partner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* min-height: 100vh; */
-    width: 100%;
-    flex-direction: column;
-}
+
 
 .partner .title h2 {
     text-align: center;
@@ -494,7 +496,7 @@ footer {
 .scroll {
     position: relative;
     display: flex;
-    width: 60%;
+    width: 90%;
     overflow: hidden;
     -webkit-mask-image: linear-gradient(90deg, transparent, #fff 20%, #fff 80%, transparent)
 }
